[gd_scene load_steps=27 format=3 uid="uid://cxgqf1h62jexd"]

[ext_resource type="Texture2D" uid="uid://blch34xqajpk2" path="res://assets/ship.png" id="1_ibxgk"]
[ext_resource type="Script" path="res://ship/ship.gd" id="1_nhvcf"]
[ext_resource type="Script" path="res://components/move.gd" id="2_8i2xl"]
[ext_resource type="Script" path="res://components/move_input.gd" id="3_kacle"]
[ext_resource type="Resource" uid="uid://b84xyxhuawutp" path="res://ship/ship_move_stats.tres" id="4_04ec1"]
[ext_resource type="Script" path="res://components/position_clamp.gd" id="5_0icrk"]
[ext_resource type="Script" path="res://components/spawner.gd" id="7_i51ac"]
[ext_resource type="PackedScene" uid="uid://btawb6q6oul7e" path="res://projectiles/laser/laser.tscn" id="9_sdckf"]
[ext_resource type="Script" path="res://components/scale.gd" id="9_tbbn8"]
[ext_resource type="Texture2D" uid="uid://xxphiv3fxbvi" path="res://assets/ship_flame.png" id="10_8acv8"]
[ext_resource type="Script" path="res://components/stats.gd" id="11_qf2qb"]
[ext_resource type="Script" path="res://components/hurtbox.gd" id="12_fyx8k"]
[ext_resource type="Script" path="res://components/hurt.gd" id="13_f5srd"]
[ext_resource type="Script" path="res://components/destroyed.gd" id="14_cie26"]
[ext_resource type="PackedScene" uid="uid://dl2jjsc5t3w2n" path="res://effects/explosion_effect.tscn" id="14_e56ko"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ahhnj"]
atlas = ExtResource("10_8acv8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3arb4"]
atlas = ExtResource("10_8acv8")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqe0q"]
atlas = ExtResource("10_8acv8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_he25g"]
atlas = ExtResource("10_8acv8")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnv2s"]
atlas = ExtResource("10_8acv8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pr1x"]
atlas = ExtResource("10_8acv8")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rbw40"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahhnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3arb4")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqe0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he25g")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnv2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pr1x")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3arjd"]
atlas = ExtResource("1_ibxgk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_avidy"]
atlas = ExtResource("1_ibxgk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mov4"]
atlas = ExtResource("1_ibxgk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0maqo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3arjd")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avidy")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mov4")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_nhvcf")

[node name="Anchor" type="Node2D" parent="."]
position = Vector2(0, 16)

[node name="FlameSprite" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_rbw40")
animation = &"center"
autoplay = "center"

[node name="ShipSprite" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_0maqo")
animation = &"center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_8i2xl")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_kacle")
move_stats = ExtResource("4_04ec1")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_0icrk")
actor = NodePath("..")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-5, -4)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(5, -4)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_i51ac")
scene = ExtResource("9_sdckf")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_tbbn8")
sprite = NodePath("../Anchor")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("11_qf2qb")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("12_fyx8k")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent"]
polygon = PackedVector2Array(-8, 2, -3, -3, -3, -4, -1, -7, 1, -7, 3, -4, 3, -3, 8, 2, 8, 4, 5, 4, 5, 7, -5, 7, -5, 4, -8, 4)

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("13_f5srd")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_i51ac")
scene = ExtResource("14_e56ko")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("14_cie26")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../ExplosionSpawnerComponent")
